rand_string/manifests/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uuid-dep
  namespace: exercises
spec:
  serviceName: uuid-svc
  replicas: 1
  selector:
    matchLabels:
      app: uuid
  template:
    metadata:
      labels:
        app: uuid
    spec:
      containers:
        - name: stamper
          image: ajhaa/stamper
          volumeMounts: # Mount volume
          - name: uuid
            mountPath: /app/shared/
        - name: displayer
          image: ajhaa/displayer
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts: # Mount volume
          - name: uuid
            mountPath: /app/shared/
  volumeClaimTemplates:
    - metadata:
        name: uuid
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
