rand_string/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uuid-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: uuid
  ports:
    - port: 2300
      protocol: TCP
      targetPort: 3000
