rand_string/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uuid-ingress
  namespace: exercises
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: uuid-svc
          servicePort: 2300
